--- a/themes/ucb/scss/components/_lists.scss
+++ b/themes/ucb/scss/components/_lists.scss
@@ -98,6 +98,7 @@ ul.list-style-border > li {
   border: 1px solid $border;
   border-top: none;
   padding: 10px;
+  margin-bottom:0;
 }
 ul.list-style-icon-1,
 ul.list-style-icon-2,
